# personal_learning_assistant

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md
backend/: main.py  pyproject.toml
backend/app/api/: main.py
backend/app/api/routes/: q_and_a.py
backend/app/core/: config.py
docs/: documentation.md
frontend/: run.py
frontend/.streamlit/: config.toml
iac/: main.tf
src/: openai_chat_assistant.py  requirements.txt
src/notebooks/: openai_chat_assistant.ipynb  personal_learning_assistant.ipynb
src/personal_learning_assistant/: __init__.py  question_generator.py
