[tool.poetry]
name = "backend"
version = "0.1.0"
description = "This focus on the functionality of the application"
authors = ["John Robert, Temi Adeoti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
